--- a/templates/post.html
+++ b/templates/post.html
@@ -19,10 +19,13 @@
                                     <a class="btn btn-info btn-sm" href="{{ url_for('update_post', post_id=post.id) }}">Editar</a>
                                 {% endif %}
                                 
-                                <!-- Botão Excluir: Visível para autor, moderador OU admin -->
-                                <button type="button" class="btn btn-danger btn-sm" data-toggle="modal" data-target="#deleteModal">
-                                    Excluir
-                                </button>
+                                {% if current_user.is_authenticated and (post.author == current_user or is_moderator(current_user) or is_admin(current_user)) %}
+                                
+                                    <button type="button" class="btn btn-danger btn-sm" data-toggle="modal" data-target="#deleteModal">
+                                        Excluir
+                                    </button>
+                                {% endif %}
+
                             </div>
                         {% endif %}
                     {% endif %}
