--- a/templates/home.html
+++ b/templates/home.html
@@ -1,4 +1,9 @@
 {% extends "base.html" %}
+
+{% block extra_css %}
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/home.css') }}">
+{% endblock %}
+
 {% block title %}Home • System Blog{% endblock %}
 {% block content %}
     <div class="row">
